load("//e2e_tests:compile_test.bzl", "compile_test_suite")
load("//e2e_tests:corpus.bzl", "corpus_test_suite")

# p4c corpus STF tests run in CI. All entries must pass.
#
# To add a new test:
#   1. Add its base name to v1model_stf_corpus_test below.
#   2. Run: bazel test //e2e_tests/corpus:v1model_stf_corpus_test
#   3. If it fails, move it to the appropriate manual suite below instead,
#      grouped with other tests blocked on the same missing feature.
#      Create a new manual suite if no existing one fits.
corpus_test_suite(
    name = "v1model_stf_corpus_test",
    includes = [
        "@p4c//testdata/p4_16_samples:arith-inline-skeleton.p4",
        "@p4c//testdata/p4_16_samples:arith-skeleton.p4",
        "@p4c//testdata/p4_16_samples:ml-headers.p4",
    ],
    stf_overrides = {
        # Upstream STF expects 14 bytes but omits 3 bytes of un-parsed payload
        # that v1model appends after deparsed headers.
        "gauntlet_invalid_hdr_short_circuit-bmv2": "//e2e_tests/corpus:gauntlet_invalid_hdr_short_circuit-bmv2.stf",
    },
    tests = [
        "arith-bmv2",
        "arith-inline-bmv2",
        "arith1-bmv2",
        "arith2-bmv2",
        "arith2-inline-bmv2",
        "arith3-bmv2",
        "arith4-bmv2",
        "arith5-bmv2",
        "array-copy-bmv2",
        "bvec-hdr-bmv2",
        "checksum-l4-bmv2",
        "checksum1-bmv2",
        "checksum2-bmv2",
        "checksum3-bmv2",
        "constant-in-calculation-bmv2",
        "default-action-arg-bmv2",
        "default_action-bmv2",
        "enum-bmv2",
        "equality-bmv2",
        "equality-varbit-bmv2",
        "flag_lost-bmv2",
        "gauntlet_action_mux-bmv2",
        "gauntlet_action_return-bmv2",
        "gauntlet_arithref_cast-bmv2",
        "gauntlet_complex_initialization-bmv2",
        "gauntlet_copy_out-bmv2",
        "gauntlet_enum_assign-bmv2",
        "gauntlet_exit_after_valid-bmv2",
        "gauntlet_exit_combination_1-bmv2",
        "gauntlet_exit_combination_10-bmv2",
        "gauntlet_exit_combination_11-bmv2",
        "gauntlet_exit_combination_13-bmv2",
        "gauntlet_exit_combination_14-bmv2",
        "gauntlet_exit_combination_15-bmv2",
        "gauntlet_exit_combination_16-bmv2",
        "gauntlet_exit_combination_17-bmv2",
        "gauntlet_exit_combination_18-bmv2",
        "gauntlet_exit_combination_19-bmv2",
        "gauntlet_exit_combination_2-bmv2",
        "gauntlet_exit_combination_20-bmv2",
        "gauntlet_exit_combination_21-bmv2",
        "gauntlet_exit_combination_22-bmv2",
        "gauntlet_exit_combination_23-bmv2",
        "gauntlet_exit_combination_3-bmv2",
        "gauntlet_exit_combination_4-bmv2",
        "gauntlet_exit_combination_5-bmv2",
        "gauntlet_exit_combination_6-bmv2",
        "gauntlet_exit_combination_7-bmv2",
        "gauntlet_exit_combination_8-bmv2",
        "gauntlet_exit_combination_9-bmv2",
        "gauntlet_function_if_hdr_return-bmv2",
        "gauntlet_function_return-bmv2",
        "gauntlet_function_return_cast-bmv2",
        "gauntlet_hdr_assign_1-bmv2",
        "gauntlet_hdr_assign_2-bmv2",
        "gauntlet_hdr_function_cast-bmv2",
        "gauntlet_hdr_in_value-bmv2",
        "gauntlet_hdr_init-bmv2",
        "gauntlet_hdr_int_initializer-bmv2",
        "gauntlet_hdr_out_in_action-bmv2",
        "gauntlet_hdr_set_valid-bmv2",
        "gauntlet_index_1-bmv2",
        "gauntlet_index_2-bmv2",
        "gauntlet_index_4-bmv2",
        "gauntlet_index_5-bmv2",
        "gauntlet_index_6-bmv2",
        "gauntlet_index_7-bmv2",
        "gauntlet_index_8-bmv2",
        "gauntlet_index_9-bmv2",
        "gauntlet_indirect_hdr_assign_1-bmv2",
        "gauntlet_indirect_hdr_assign_2-bmv2",
        "gauntlet_instance_overwrite-bmv2",
        "gauntlet_int_casting-bmv2",
        "gauntlet_int_slice-bmv2",
        "gauntlet_invalid_hdr_assign-bmv2",
        "gauntlet_invalid_hdr_short_circuit-bmv2",
        "gauntlet_list_as_in_argument-bmv2",
        "gauntlet_mux_eval-bmv2",
        "gauntlet_mux_hdr-bmv2",
        "gauntlet_mux_typecasting-bmv2",
        "gauntlet_mux_validity-bmv2",
        "gauntlet_nested_ifs_in_function-bmv2",
        "gauntlet_nested_slice-bmv2",
        "gauntlet_nested_switch-bmv2",
        "gauntlet_nested_table_calls-bmv2",
        "gauntlet_return_truncate-bmv2",
        "gauntlet_set_invalid-bmv2",
        "gauntlet_set_valid_in_function-bmv2",
        "gauntlet_short_circuit-bmv2",
        "gauntlet_side_effect_order_1-bmv2",
        "gauntlet_side_effect_order_2-bmv2",
        "gauntlet_side_effect_order_3-bmv2",
        "gauntlet_side_effect_order_4-bmv2",
        "gauntlet_side_effect_order_5-bmv2",
        "gauntlet_side_effects_in_mux-bmv2",
        "gauntlet_switch_exclusivity-bmv2",
        "gauntlet_switch_nested_table_apply-bmv2",
        "gauntlet_switch_shadowing-bmv2",
        "gauntlet_table_call_in_expression-bmv2",
        "gauntlet_typedef_cast-bmv2",
        "gauntlet_uninitialized_bool_struct-bmv2",
        "gauntlet_variable_shadowing-bmv2",
        "header-bool-bmv2",
        "header-stack-ops-bmv2",
        "invalid-hdr-warnings3-bmv2",
        "ipv6-switch-ml-bmv2",
        "issue-2123-2-bmv2",
        "issue-2123-3-bmv2",
        "issue1000-bmv2",
        "issue1025-bmv2",
        "issue1049-bmv2",
        "issue1062-1-bmv2",
        "issue1097-2-bmv2",
        "issue1566-bmv2",
        "issue1755-1-bmv2",
        "issue1755-bmv2",
        "issue1768-bmv2",
        "issue1814-1-bmv2",
        "issue1824-bmv2",
        "issue1879-bmv2",
        "issue2147-bmv2",
        "issue2153-bmv2",
        "issue2170-bmv2",
        "issue2176-bmv2",
        "issue2205-1-bmv2",
        "issue2205-bmv2",
        "issue2221-bmv2",
        "issue2225-bmv2",
        "issue2287-bmv2",
        "issue2343-bmv2",
        "issue2375-1-bmv2",
        "issue2375-bmv2",
        "issue2383-bmv2",
        "issue2392-bmv2",
        "issue2488-bmv2",
        "issue2498-bmv2",
        "issue2614-bmv2",
        "issue3488-1-bmv2",
        "issue3488-bmv2",
        "issue447-1-bmv2",
        "issue447-2-bmv2",
        "issue447-3-bmv2",
        "issue447-4-bmv2",
        "issue447-5-bmv2",
        "issue447-bmv2",
        "issue510-bmv2",
        "issue561-1-bmv2",
        "issue561-2-bmv2",
        "issue561-3-bmv2",
        "issue561-4-bmv2",
        "issue561-5-bmv2",
        "issue561-6-bmv2",
        "issue561-7-bmv2",
        "issue635-bmv2",
        "issue655-bmv2",
        "issue774-4-bmv2",
        "issue983-bmv2",
        "issue995-bmv2",
        "key-bmv2",
        "match-on-exprs-bmv2",
        "opassign1-bmv2",
        "opassign2-bmv2",
        "parser_error-bmv2",
        "runtime-index-2-bmv2",
        "runtime-index-bmv2",
        "saturated-bmv2",
        "stack_complex-bmv2",
        "subparser-with-header-stack-bmv2",
        "table-entries-exact-bmv2",
        "table-entries-exact-ternary-bmv2",
        "table-entries-lpm-bmv2",
        "table-entries-optional-bmv2",
        "table-entries-priority-bmv2",
        "table-entries-range-bmv2",
        "table-entries-ser-enum-bmv2",
        "table-entries-ternary-bmv2",
        "ternary2-bmv2",
        "test-parserinvalidargument-error-bmv2",
        "union-bmv2",
        "union-valid-bmv2",
        "union1-bmv2",
        "union2-bmv2",
        "union3-bmv2",
        "v1model-const-entries-bmv2",
        "v1model-special-ops-bmv2",
    ],
)

# Tests that need sibling skeleton .p4 files as #include dependencies.
# These are compiled with an extra -I pointing at the testdata directory.
# Blocked on user-defined extern support (extern functions with no P4 body).
corpus_test_suite(
    name = "skeleton_includes_stf_corpus_test",
    includes = [
        "@p4c//testdata/p4_16_samples:arith-inline-skeleton.p4",
        "@p4c//testdata/p4_16_samples:arith-skeleton.p4",
        "@p4c//testdata/p4_16_samples:ml-headers.p4",
    ],
    tags = ["manual"],
    tests = [
        "extern-funcs-bmv2",  # unhandled extern call: extern_func
    ],
)

# PSA corpus STF tests that pass in CI. Covers basic PSA pipeline: ingress/egress
# parsing, drop-by-default, send_to_port, counters, metadata, parser errors,
# registers, multicast, Hash, Meter, and InternetChecksum externs.
corpus_test_suite(
    name = "psa_stf_corpus_test",
    stf_overrides = {
        "psa-action-profile1": "//e2e_tests/corpus:psa-action-profile1.stf",
        "psa-action-profile3": "//e2e_tests/corpus:psa-action-profile3.stf",
        "psa-action-profile4": "//e2e_tests/corpus:psa-action-profile4.stf",
        "psa-action-selector1": "//e2e_tests/corpus:psa-action-selector1.stf",
        "psa-action-selector2": "//e2e_tests/corpus:psa-action-selector2.stf",
        "psa-action-selector3": "//e2e_tests/corpus:psa-action-selector3.stf",
        "psa-conditional_operator": "//e2e_tests/corpus:psa-conditional_operator.stf",
        "psa-counter1": "//e2e_tests/corpus:psa-counter1.stf",
        "psa-counter2": "//e2e_tests/corpus:psa-counter2.stf",
        "psa-counter3": "//e2e_tests/corpus:psa-counter3.stf",
        "psa-counter4": "//e2e_tests/corpus:psa-counter4.stf",
        "psa-custom-type-counter-index": "//e2e_tests/corpus:psa-custom-type-counter-index.stf",
        "psa-example-counters-bmv2": "//e2e_tests/corpus:psa-example-counters-bmv2.stf",
        "psa-example-digest-bmv2": "//e2e_tests/corpus:psa-example-digest-bmv2.stf",
        "psa-example-incremental-checksum": "//e2e_tests/corpus:psa-example-incremental-checksum.stf",
        "psa-example-logical-operations": "//e2e_tests/corpus:psa-example-logical-operations.stf",
        "psa-example-mask-range": "//e2e_tests/corpus:psa-example-mask-range.stf",
        "psa-example-mask-range1": "//e2e_tests/corpus:psa-example-mask-range1.stf",
        "psa-example-optional-match": "//e2e_tests/corpus:psa-example-optional-match.stf",
        "psa-example-parser-checksum": "//e2e_tests/corpus:psa-example-parser-checksum.stf",
        "psa-example-range-match": "//e2e_tests/corpus:psa-example-range-match.stf",
        "psa-example-switch-with-constant-expr": "//e2e_tests/corpus:psa-example-switch-with-constant-expr.stf",
        "psa-hash": "//e2e_tests/corpus:psa-hash.stf",
        "psa-hash-02": "//e2e_tests/corpus:psa-hash-02.stf",
        "psa-hash-03": "//e2e_tests/corpus:psa-hash-03.stf",
        "psa-hash-04": "//e2e_tests/corpus:psa-hash-04.stf",
        "psa-hash-05": "//e2e_tests/corpus:psa-hash-05.stf",
        "psa-hash-06": "//e2e_tests/corpus:psa-hash-06.stf",
        "psa-hash-07": "//e2e_tests/corpus:psa-hash-07.stf",
        "psa-hash-08": "//e2e_tests/corpus:psa-hash-08.stf",
        "psa-hash-09": "//e2e_tests/corpus:psa-hash-09.stf",
        "psa-hash-10": "//e2e_tests/corpus:psa-hash-10.stf",
        "psa-header-stack": "//e2e_tests/corpus:psa-header-stack.stf",
        "psa-idle-timeout": "//e2e_tests/corpus:psa-idle-timeout.stf",
        "psa-isvalid": "//e2e_tests/corpus:psa-isvalid.stf",
        "psa-meter1": "//e2e_tests/corpus:psa-meter1.stf",
        "psa-meter3": "//e2e_tests/corpus:psa-meter3.stf",
        "psa-meter4": "//e2e_tests/corpus:psa-meter4.stf",
        "psa-meter5": "//e2e_tests/corpus:psa-meter5.stf",
        "psa-random": "//e2e_tests/corpus:psa-random.stf",
        "psa-register1": "//e2e_tests/corpus:psa-register1.stf",
        "psa-register2": "//e2e_tests/corpus:psa-register2.stf",
        "psa-register3": "//e2e_tests/corpus:psa-register3.stf",
        "psa-remove-header": "//e2e_tests/corpus:psa-remove-header.stf",
        "psa-switch-expression-without-default": "//e2e_tests/corpus:psa-switch-expression-without-default.stf",
        "psa-table-hit-miss": "//e2e_tests/corpus:psa-table-hit-miss.stf",
        "psa-variable-index": "//e2e_tests/corpus:psa-variable-index.stf",
    },
    tests = [
        "hash-extern-bmv2",
        "internet_checksum1-bmv2",
        "psa-action-profile1",
        "psa-action-profile3",
        "psa-action-profile4",
        "psa-action-selector1",
        "psa-action-selector2",
        "psa-action-selector3",
        "psa-basic-counter-bmv2",
        "psa-bool-ternary-const-entry-bmv2",
        "psa-conditional_operator",
        "psa-counter1",
        "psa-counter2",
        "psa-counter3",
        "psa-counter4",
        "psa-custom-type-counter-index",
        "psa-drop-all-bmv2",
        "psa-drop-all-corrected-bmv2",
        "psa-e2e-cloning-basic-bmv2",
        "psa-end-of-ingress-test-bmv2",
        "psa-example-counters-bmv2",
        "psa-example-digest-bmv2",
        "psa-example-dpdk-varbit-bmv2",
        "psa-example-incremental-checksum",
        "psa-example-logical-operations",
        "psa-example-mask-range",
        "psa-example-mask-range1",
        "psa-example-optional-match",
        "psa-example-parser-checksum",
        "psa-example-range-match",
        "psa-example-register2-bmv2",
        "psa-example-switch-with-constant-expr",
        "psa-fwd-bmv2",
        "psa-hash",
        "psa-hash-02",
        "psa-hash-03",
        "psa-hash-04",
        "psa-hash-05",
        "psa-hash-06",
        "psa-hash-07",
        "psa-hash-08",
        "psa-hash-09",
        "psa-hash-10",
        "psa-header-stack",
        "psa-i2e-cloning-basic-bmv2",
        "psa-idle-timeout",
        "psa-isvalid",
        "psa-metadata-bmv2",
        "psa-meter1",
        "psa-meter3",
        "psa-meter4",
        "psa-meter5",
        "psa-meter7-bmv2",
        "psa-multicast-basic-2-bmv2",
        "psa-multicast-basic-bmv2",
        "psa-multicast-basic-corrected-bmv2",
        "psa-parser-error-test-bmv2",
        "psa-random",
        "psa-recirculate-no-meta-bmv2",
        "psa-register-complex-bmv2",
        "psa-register-read-write-2-bmv2",
        "psa-register-read-write-bmv2",
        "psa-register1",
        "psa-register2",
        "psa-register3",
        "psa-remove-header",
        "psa-resubmit-bmv2",
        "psa-switch-expression-without-default",
        "psa-table-hit-miss",
        "psa-top-level-assignments-bmv2",
        "psa-unicast-or-drop-bmv2",
        "psa-unicast-or-drop-corrected-bmv2",
        "psa-variable-index",
    ],
)

# Tests that take excessively long to compile with p4c-4ward.
corpus_test_suite(
    name = "slow_compile_stf_corpus_test",
    tags = ["manual"],
    tests = [
        "gauntlet_various_ops-bmv2",  # p4c-4ward takes 10+ minutes
    ],
)

# PSA programs that take excessively long to compile with p4c-4ward.
compile_test_suite(
    name = "psa_slow_compile_test",
    tags = ["manual"],
    tests = [
        "psa-subtract-inst1",  # OOM-killed during compilation
    ],
)

# Tests blocked on unsupported non-v1model/non-PSA architectures.
# These fail at p4c-4ward compile time.
corpus_test_suite(
    name = "unsupported_arch_stf_corpus_test",
    tags = ["manual"],
    tests = [
        "gauntlet_optional-bmv2",  # unsupported architecture 'top'
    ],
)

# PSA tests blocked on unimplemented simulator features.
corpus_test_suite(
    name = "psa_blocked_stf_corpus_test",
    stf_overrides = {
        "psa-test": "//e2e_tests/corpus:psa-test.stf",
    },
    tags = ["manual"],
    tests = [
        "psa-test",  # parser value_set not implemented
    ],
)

# PSA compile-only tests — programs that compile through p4c-4ward but don't have STF
# tests (DPDK-target programs, programs without STF files, etc.).
compile_test_suite(
    name = "psa_compile_test",
    tests = [
        "fwd-bmv2-psa",
        "m_psa-dpdk-non-zero-arg-default-action-08",
        "psa-action-selector4",
        "psa-action-selector5",
        "psa-action-selector6",
        "psa-dpdk-128bitCast",
        "psa-dpdk-binary-operations",
        "psa-dpdk-binary-operations-1",
        "psa-dpdk-checksum-arg-header",
        "psa-dpdk-errorcode",
        "psa-dpdk-errorcode-1",
        "psa-dpdk-errorcode-2",
        "psa-dpdk-flatten-local-struct",
        "psa-dpdk-hdr-field-non-align",
        "psa-dpdk-header-union-typedef",
        "psa-dpdk-large-header-fields",
        "psa-dpdk-large-struct-fields",
        "psa-dpdk-lpm-match-err3",
        "psa-dpdk-lpm-match-err4",
        "psa-dpdk-lpm-match-err5",
        "psa-dpdk-lpm-match-valid",
        "psa-dpdk-non-zero-arg-default-action-01",
        "psa-dpdk-non-zero-arg-default-action-02",
        "psa-dpdk-non-zero-arg-default-action-03",
        "psa-dpdk-non-zero-arg-default-action-04",
        "psa-dpdk-non-zero-arg-default-action-05",
        "psa-dpdk-non-zero-arg-default-action-06",
        "psa-dpdk-non-zero-arg-default-action-07",
        "psa-dpdk-non-zero-arg-default-action-08",
        "psa-dpdk-non-zero-arg-default-action-09",
        "psa-dpdk-struct-field",
        "psa-dpdk-table-entries-exact-ternary",
        "psa-dpdk-table-key-consolidation-if",
        "psa-dpdk-table-key-consolidation-if-1",
        "psa-dpdk-table-key-consolidation-mixed-keys",
        "psa-dpdk-table-key-consolidation-mixed-keys-1",
        "psa-dpdk-table-key-consolidation-mixed-keys-10",
        "psa-dpdk-table-key-consolidation-mixed-keys-2",
        "psa-dpdk-table-key-consolidation-mixed-keys-3",
        "psa-dpdk-table-key-consolidation-mixed-keys-4",
        "psa-dpdk-table-key-consolidation-mixed-keys-5",
        "psa-dpdk-table-key-consolidation-mixed-keys-6",
        "psa-dpdk-table-key-consolidation-mixed-keys-7",
        "psa-dpdk-table-key-consolidation-mixed-keys-8",
        "psa-dpdk-table-key-consolidation-mixed-keys-9",
        "psa-dpdk-table-key-consolidation-switch",
        "psa-dpdk-table-key-error",
        "psa-dpdk-table-key-error-1",
        "psa-dpdk-table-key-isValid1",
        "psa-dpdk-table-key-isValid2",
        "psa-dpdk-table-key-isValid3",
        "psa-dpdk-table-key-isValid4",
        "psa-dpdk-table-key-isValid5",
        "psa-dpdk-table-key-isValid6",
        "psa-dpdk-table-key-isValid7",
        "psa-dpdk-tmp-mask-align",
        "psa-dpdk-token-too-big",
        "psa-example-dpdk-byte-alignment_1",
        "psa-example-dpdk-byte-alignment_2",
        "psa-example-dpdk-byte-alignment_3",
        "psa-example-dpdk-byte-alignment_4",
        "psa-example-dpdk-byte-alignment_5",
        # psa-example-dpdk-byte-alignment_{6,7,8}: p4c rejects nested struct write in header
        "psa-example-dpdk-byte-alignment_9",
        "psa-example-dpdk-counter",
        "psa-example-dpdk-directmeter",
        "psa-example-dpdk-externs",
        "psa-example-dpdk-local-variable",
        "psa-example-dpdk-meter",
        "psa-example-dpdk-meter-execute-err",
        "psa-example-dpdk-meter1",
        "psa-example-select_tuple",
        "psa-example-select_tuple-1",
        "psa-example-select_tuple-mask",
        "psa-example-select_tuple-wc",
    ],
)
