load("//bazel:fourward_pipeline.bzl", "fourward_pipeline")

package(
    default_applicable_licenses = ["//:license"],
    default_testonly = True,
    licenses = ["notice"],
)

fourward_pipeline(
    name = "stateful_pb",
    src = "stateful.p4",
    out = "stateful.txtpb",
    visibility = ["//p4runtime:__pkg__"],
)

fourward_pipeline(
    name = "range_table_pb",
    src = "range_table.p4",
    out = "range_table.txtpb",
    visibility = ["//p4runtime:__pkg__"],
)

fourward_pipeline(
    name = "value_set_pb",
    src = "value_set.p4",
    out = "value_set.txtpb",
    visibility = ["//p4runtime:__pkg__"],
)

fourward_pipeline(
    name = "action_profile_pb",
    src = "action_profile.p4",
    out = "action_profile.txtpb",
    visibility = ["//p4runtime:__pkg__"],
)

fourward_pipeline(
    name = "refers_to_pb",
    src = "refers_to.p4",
    out = "refers_to.txtpb",
    visibility = ["//p4runtime:__pkg__"],
)
