load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")
load("//e2e_tests:p4c.bzl", "p4c_compile")

package(
    default_applicable_licenses = ["//:license"],
    default_testonly = True,
    licenses = ["notice"],
)

p4c_compile(
    name = "lpm_routing",
    src_p4 = "lpm_routing.p4",
    visibility = ["//p4runtime:__pkg__"],
)

kt_jvm_test(
    name = "lpm_routing_test",
    srcs = ["LpmRoutingTest.kt"],
    data = [
        "lpm_routing.stf",
        ":lpm_routing_pb",
    ],
    test_class = "fourward.e2e.lpmrouting.LpmRoutingTest",
    deps = [
        "//stf",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:junit_junit",
    ],
)
